Updated draft of the SF Certification FAQ

--- a/sites/faq/how-to-get-sf-certification-vouchers.mdx
+++ b/sites/faq/how-to-get-sf-certification-vouchers.mdx
@@ -23,11 +23,19 @@ Let's dive in.
 
 When it comes to official proofs of Salesforce knowledge, there are four types available: Badges and Superbadges available on Trailhead (self-learning platform for everyone), Certifications available on Webassessor (examination platform for everyone) and Professional Accreditations available on Partner Learning Camp (self-learning platform for official Partners).
 
+### Badges
+
 [Badges](https://trailhead.salesforce.com/modules) are obtained (for free) by passing few quizes and, in some cases, guided hands-on exercises within a Trailhead module focused on a specific topic. It can be technical (for example configuration or development) or business (best practices or frameworks) one. All required knowledge is provided within the module and it can be completed in between 5 to 40 minutes depending on the module complexity. They are great to learn stuff, but are not challenging to obtain (especially with unlimitted attempts available). For me, having a badge is a proof that someone has high-level awareness of a topic covered by the badge.
+
+### Superbadges
 
 Trailhead also offers [Superbadges](https://trailhead.salesforce.com/superbadges) (also for free). These are different beasts from standard badges - not only they have some of thsoe as a prerequisites, but their key task is a full-blown hands on exercise on the Salesforce CRM platform. While they also provide a guide with references, it's not enough and some work with documentation and problem solving is also required to perform the hands-on tasks. They take from few to a dozen hours and are much closer to project experience. For me, having a superbadge is a proof that someone completed the basic version of a task once and should be able to do something similar with documentation and support.
 
+### Salesforce Certifications
+
 Salesforce [Certifications](https://trailhead.salesforce.com/en/credentials/marketingoverview) are completly different. Whereas badges and superbadges are created for learning, certifications are for proving the knowledge. You are expected to complete (many) badges to attempt the certification exam. Real project experience is also extremly helpful (or even required) for most of them. On top of that, they aren't free. Exam attempts cost between $75+VAT (for Associate exams), $200+VAT (for most) and $400+VAT (for Architect exams). Oh yeah, there is also Certified Technical Architect for $6000+VAT per attempt waiting for you ;). While the difficulty between the exams vary a lot, they are much more challenging than badges as you have limited time (1-2 hours) to pass them and cannot use any resources other than your head. For me, having a cerification is a proof that someone has a baseline knowledge in the area and can be at least semi-independent in work there.
+
+### Salesforce Accreditations
 
 Finally, there are [Professional Accreditations](https://partners.salesforce.com/pdx/s/learn/article/accredited-professional-MCBQXAKQTOTZCQHOXTMK33NUMLWY?language=en_US) available only for Salesforce Partners - companies responsible for implementing, supporting and enriching Salesforce solutions for SF customers. Professional Accreditations are very similar to Salesforce Certifications - they are also paid, also require a passed exam, and also have a learning path build with Trailhead modules. There are some differences, however. On top of publicly available modules they have some Partner-only knowledege sources available (in some cases - hands-on exercises). Additionally, they cover more niche topics that are not part of the standard Salesforce Certifications. For me, having an accreditation is a proof that someone has a baseline knowledge in the area and can be at least semi-independent in work there.
 
@@ -43,10 +51,43 @@ Does it mean that someone with just badges is worse expert than someone with 5 c
 
 ## Why get Salesforce certified?
 
+Badges, superbadges and actual project experience are enough to be a top expert. There is no need to pay for certification to be outstanding Trailblazer. Still, there are significant benefits to pursuing official credentials:
 
+### You will be seen by recruiters
 
+Certifications are great tool to stand out to recruiters. They are easy to understand and show in search, making them perfect tool to put the foot in the door.
+
+To better understand that, let's break down recruitment process to three key steps (yeah, I simplify it a lot):
+
+1. Create a pool of candidates - quick search (on LinkedIn, career platforms, received CVs) for potential candidates using keyword matches. It can be manual, it can be automated with AI. Here your previous role names and certifications play the leading role.
+2. Select the most interesting candidates - deeper dive into profile to limit the pool from previous step to the best matches. Here your previous job and task descriptions shine as they showcase what you are really doing. Certifications can give you an edge here as proofs of knowledge - especially for Salesforce Partner companies.
+3. Interview the top canditates - after two previous rounds it's time to talk. At this step certs are no longer important and the key are your communication and self presentation skills along with real platform experience.
+
+As you can see, while certifcates won't guarantee you a job, they will give you much more visibility and increase your chance of being picked up. This is especially true for higher positions where credentials are frequently optional or even mandatory requirements.
+
+### You will have argument for a rise
+
+Certification is also great argument for getting a rise. It is easy proof of getting better than before and a reason for you being worth more on the market (as [you will be seen by recruiters](#you-will-be-seen-by-recruiters)).
+
+It is especially true when you work for a Salesfroce Partner - for them the certs are much more important because they are checked by both Salesforce (especially the [Accredited Professional](#salesforce-accreditations) ones) and potential clients.
+
+### You will validate your knowledge
+
+Certifications are nice tool to validate your knowledge, especially if you are working on a tool for a long time. Salesforce platforms change a lot over time and while the old ways might still work (until they are sunset), there might be new, better methods. Additionally, with how broad the Salesforce tools capabilities are, you might not be aware of everythign there is available.
+
+Preparing to and passing a certification exam is a great way to validate you know the current basics for a given role and - with obligatory ongoing credential maintenance - that you stay on top of changes.
+
+### You will be motivated to get expand knowledge
+
+Certifications are also great tool when you want to learn something new. Salesforce prepares dedicated Trailmixes on Trailhead that group relevant badges for a certification area. Thanks to certifications there is also a lot of additional materials supporting your learning created by companies like Focus on Force or other Trailblazers on their blogs and videos.
+
+And getting certified after all this learning is a nice way to validate your work and get confident in your baseline knowledge on the matter.
+
+Certification sum up - not needed, but worthwile. So how can you get Salesforce Certified without ruining the budget?
 
 ## How to get Salesforce Certified for free?
+
+
 
 
 ## How to get SF Certification vouchers?
