Final veraion of the SF Certification FAQ

--- a/sites/faq/how-to-get-sf-certification-vouchers.mdx
+++ b/sites/faq/how-to-get-sf-certification-vouchers.mdx
@@ -8,12 +8,13 @@ tags: [Marketing Cloud, FAQ]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
+import { Button } from '../../src/components/Buttons.js';
 
 <LeadText content="Salesforce Certifications. What, why and how (you can pay less)." />
 
-In Salesforce ecosystem badges and certificates are everywhere. While the former is available for free on Trailhead, the latter are quite expensive to even attempt getting them. Obviously this creates some questions:
+In the Salesforce ecosystem, badges and certificates are everywhere. While the former is free on Trailhead, the latter is pretty expensive even to attempt to get them. It creates some questions:
 
-1. What is the difference free badges and paid certs?
+1. What is the difference between free badges and paid certs?
 2. Why bother with the paid option?
 3. Can you get certified for free (or at least cheaper)?
 
@@ -25,70 +26,142 @@ When it comes to official proofs of Salesforce knowledge, there are four types a
 
 ### Badges
 
-[Badges](https://trailhead.salesforce.com/modules) are obtained (for free) by passing few quizes and, in some cases, guided hands-on exercises within a Trailhead module focused on a specific topic. It can be technical (for example configuration or development) or business (best practices or frameworks) one. All required knowledge is provided within the module and it can be completed in between 5 to 40 minutes depending on the module complexity. They are great to learn stuff, but are not challenging to obtain (especially with unlimitted attempts available). For me, having a badge is a proof that someone has high-level awareness of a topic covered by the badge.
+[Badges](https://trailhead.salesforce.com/modules) are obtained (for free) by passing a few quizzes and, in some cases, guided hands-on exercises within a Trailhead module focused on a specific topic. It can be technical (for example, configuration or development) or business (best practices or frameworks). Salesforce provides all required knowledge within the module, and you should be able to complete it in between 5 to 40 minutes, depending on the module's complexity. They are great for learning and easy to obtain (especially with unlimited attempts). For me, having a badge proves that someone has a high-level awareness of a topic covered by the badge.
 
 ### Superbadges
 
-Trailhead also offers [Superbadges](https://trailhead.salesforce.com/superbadges) (also for free). These are different beasts from standard badges - not only they have some of thsoe as a prerequisites, but their key task is a full-blown hands on exercise on the Salesforce CRM platform. While they also provide a guide with references, it's not enough and some work with documentation and problem solving is also required to perform the hands-on tasks. They take from few to a dozen hours and are much closer to project experience. For me, having a superbadge is a proof that someone completed the basic version of a task once and should be able to do something similar with documentation and support.
+Trailhead also offers [Superbadges](https://trailhead.salesforce.com/superbadges) (also for free). These are different beasts from standard badges - not only do they have some of these as a prerequisite, but their crucial task is a full-blown hands-on exercise on the Salesforce CRM platform. While they also provide a guide with references, it's not enough, and some work with documentation and problem-solving is also required to perform the hands-on tasks. They take a few to a dozen hours and are much closer to project experience. For me, having a Superbadge proves that someone completed the basic version of a task once and should be able to do something similar with documentation and support.
 
 ### Salesforce Certifications
 
-Salesforce [Certifications](https://trailhead.salesforce.com/en/credentials/marketingoverview) are completly different. Whereas badges and superbadges are created for learning, certifications are for proving the knowledge. You are expected to complete (many) badges to attempt the certification exam. Real project experience is also extremly helpful (or even required) for most of them. On top of that, they aren't free. Exam attempts cost between $75+VAT (for Associate exams), $200+VAT (for most) and $400+VAT (for Architect exams). Oh yeah, there is also Certified Technical Architect for $6000+VAT per attempt waiting for you ;). While the difficulty between the exams vary a lot, they are much more challenging than badges as you have limited time (1-2 hours) to pass them and cannot use any resources other than your head. For me, having a cerification is a proof that someone has a baseline knowledge in the area and can be at least semi-independent in work there.
+Salesforce [Certifications](https://trailhead.salesforce.com/en/credentials/marketingoverview) are entirely different. Whereas badges and Superbadges are created for learning, certifications are for proving knowledge. You will complete (many) badges before you attempt the certification exam. Real project experience is also beneficial (or even required) for most of them. On top of that, they aren't free. Exam attempts cost between $75+VAT (for Associate exams), $200+VAT (for most) and $400+VAT (for Architect exams). Oh yeah, there is also a Certified Technical Architect for $6000+VAT per attempt waiting for you ;). While the difficulty between the exams varies a lot, they are much more challenging than badges as you have limited time (1-2 hours) to pass them and cannot use any resources other than your head. For me, having a certification proves that someone has a baseline knowledge in the area and can be at least semi-independent in working there.
 
 ### Salesforce Accreditations
 
-Finally, there are [Professional Accreditations](https://partners.salesforce.com/pdx/s/learn/article/accredited-professional-MCBQXAKQTOTZCQHOXTMK33NUMLWY?language=en_US) available only for Salesforce Partners - companies responsible for implementing, supporting and enriching Salesforce solutions for SF customers. Professional Accreditations are very similar to Salesforce Certifications - they are also paid, also require a passed exam, and also have a learning path build with Trailhead modules. There are some differences, however. On top of publicly available modules they have some Partner-only knowledege sources available (in some cases - hands-on exercises). Additionally, they cover more niche topics that are not part of the standard Salesforce Certifications. For me, having an accreditation is a proof that someone has a baseline knowledge in the area and can be at least semi-independent in work there.
+Finally, there are [Professional Accreditations](https://partners.salesforce.com/pdx/s/learn/article/accredited-professional-MCBQXAKQTOTZCQHOXTMK33NUMLWY?language=en_US) available only for Salesforce Partners - companies responsible for implementing, supporting and enriching Salesforce solutions for SF customers. Professional Accreditations are very similar to Salesforce Certifications - they are paid, require passing an exam, and have a learning path built with Trailhead modules. There are some differences, however. On top of publicly available modules, they have some Partner-only knowledge sources (in some cases - hands-on exercises). Additionally, they cover more niche topics that aren't part of the standard Salesforce Certifications. For me, accreditation proves that someone has a baseline knowledge in the area and can be at least semi-independent in working there.
 
-To sum up - my growing order of confidence in person's skills based on just credentials looks like this:
+To sum up - my growing order of confidence in a person's skills based on just credentials looks like this:
 
 1. Badge
 2. Associate Certification
 3. Superbadge
-4. Salesforce Non-Architect Certification and Professional Accrediation
+4. Salesforce Non-Architect Certification and Professional Accreditation
 5. Salesforce Architect Certification
 
-Does it mean that someone with just badges is worse expert than someone with 5 certificates? Not necessarily - there are knowledge titans that don't have (many or any) certificiations for various reasons, but know the tools better then Salesforce themselves. Real world project experience and expertise is best. So why bother paying for certs?
+Does it mean someone with just badges is a worse expert than someone with 5 certificates? Not necessarily - there are knowledge titans that don't have (many or any) certifications for various reasons but know the tools better than Salesforce. Real-world project experience and expertise are best. So why bother paying for certs?
 
 ## Why get Salesforce certified?
 
-Badges, superbadges and actual project experience are enough to be a top expert. There is no need to pay for certification to be outstanding Trailblazer. Still, there are significant benefits to pursuing official credentials:
+Badges, Superbadges and actual project experience are enough to be a top expert. There is no need to pay for certification to be an outstanding Trailblazer. Still, there are significant benefits to pursuing official credentials:
 
 ### You will be seen by recruiters
 
-Certifications are great tool to stand out to recruiters. They are easy to understand and show in search, making them perfect tool to put the foot in the door.
+Certifications are a great tool to stand out to recruiters. They are easy to understand and show in search, making them the perfect tool to put their foot in the door.
 
-To better understand that, let's break down recruitment process to three key steps (yeah, I simplify it a lot):
+To better understand that, let's break down the recruitment process into three key steps (yeah, I simplify it a lot):
 
-1. Create a pool of candidates - quick search (on LinkedIn, career platforms, received CVs) for potential candidates using keyword matches. It can be manual, it can be automated with AI. Here your previous role names and certifications play the leading role.
-2. Select the most interesting candidates - deeper dive into profile to limit the pool from previous step to the best matches. Here your previous job and task descriptions shine as they showcase what you are really doing. Certifications can give you an edge here as proofs of knowledge - especially for Salesforce Partner companies.
-3. Interview the top canditates - after two previous rounds it's time to talk. At this step certs are no longer important and the key are your communication and self presentation skills along with real platform experience.
+1. Create a pool of candidates - quick search (on LinkedIn, career platforms, received CVs) for potential candidates using keyword matches. It can be manual; it can be automated with AI. Here, your previous role names and certifications play the leading role.
+2. Select the most interesting candidates - a deeper dive into the profile to limit the pool from the previous step to the best matches. Your past jobs and task descriptions shine here as they showcase what you are doing. Certifications can give you an edge here as proof of knowledge - especially for Salesforce Partner companies.
+3. Interview the top candidates - after two previous rounds, it's time to talk. At this step, certifications are no longer critical, and the key is your communication, self-presentation skills, and real platform experience.
 
-As you can see, while certifcates won't guarantee you a job, they will give you much more visibility and increase your chance of being picked up. This is especially true for higher positions where credentials are frequently optional or even mandatory requirements.
+As you can see, certificates won't guarantee a job, but they will give you much more visibility and increase your chance of being picked up. This is especially true for higher positions where credentials are frequently optional or even mandatory requirements.
 
-### You will have argument for a rise
+### You will have an argument for a rise
 
-Certification is also great argument for getting a rise. It is easy proof of getting better than before and a reason for you being worth more on the market (as [you will be seen by recruiters](#you-will-be-seen-by-recruiters)).
+Certification is also an excellent argument for getting a rise. It is easy proof of getting better than before and a reason for you being worth more on the market (as [recruiters will see you easier](#you-will-be-seen-by-recruiters)).
 
-It is especially true when you work for a Salesfroce Partner - for them the certs are much more important because they are checked by both Salesforce (especially the [Accredited Professional](#salesforce-accreditations) ones) and potential clients.
+It is especially true when you work for a Salesforce Partner - for them, the certs are much more critical because both Salesforce and potential clients check them when looking for a project partner.
 
 ### You will validate your knowledge
 
-Certifications are nice tool to validate your knowledge, especially if you are working on a tool for a long time. Salesforce platforms change a lot over time and while the old ways might still work (until they are sunset), there might be new, better methods. Additionally, with how broad the Salesforce tools capabilities are, you might not be aware of everythign there is available.
+Certifications are a nice tool to validate your knowledge, especially if you have been working on a tool for a long time. Salesforce platforms change a lot over time, and while the old ways might still work for some time, there might be new, better methods. Additionally, you may not be aware of everything available with how broad the Salesforce capabilities are.
 
-Preparing to and passing a certification exam is a great way to validate you know the current basics for a given role and - with obligatory ongoing credential maintenance - that you stay on top of changes.
+Preparing for and passing a certification exam is a great way to validate you know the current basics for a given role and - with obligatory ongoing credential maintenance - that you stay on top of changes.
 
-### You will be motivated to get expand knowledge
+### You will be motivated to expand your knowledge
 
-Certifications are also great tool when you want to learn something new. Salesforce prepares dedicated Trailmixes on Trailhead that group relevant badges for a certification area. Thanks to certifications there is also a lot of additional materials supporting your learning created by companies like Focus on Force or other Trailblazers on their blogs and videos.
+Certifications are also great tools when you want to learn something new. Salesforce prepares dedicated Trailmixes on Trailhead that group relevant badges for a certification area. Thanks to certifications, there are also a lot of additional materials supporting your learning created by companies like Focus on Force or other Trailblazers on their blogs and videos.
 
-And getting certified after all this learning is a nice way to validate your work and get confident in your baseline knowledge on the matter.
+After all this learning, getting certified is a neat way to validate your work and gain confidence in your baseline knowledge.
 
-Certification sum up - not needed, but worthwile. So how can you get Salesforce Certified without ruining the budget?
+Certification sum up - not needed, but worthwhile. So, how can you get Salesforce Certified without ruining the budget?
 
 ## How to get Salesforce Certified for free?
 
+Salesforce certification is costly, and paying for it out of pocket creates a significant dent in the budget, especially with static worldwide pricing that doesn't consider the difference in purchasing power between countries.
 
+There are, however, some options to spend less or even nothing to get a chance to pass the credential exam.
 
+### Vouchers from your company
 
-## How to get SF Certification vouchers?
+This is probably not the answer you are looking for, but the easiest way to get the voucher might be to get it from your company. However, a lot will depend on the company you work for.
 
+It is easy if you work for Salesforce Partner. Not only are they getting vouchers as a part of the Partner program, but they also have a discount on buying more for their employees. Additionally, they want their employees to be certified, giving them a better chance to score a new project. Salesforce and potential clients look for project partner certifications on company-wide and specific consultant levels.
+
+It is much more challenging if you work as an in-house. Many companies don't want to fund exam vouchers to their in-house employees because they don't see the added value for their day-to-day work and fear the [recruitment](#you-will-be-seen-by-recruiters)/[rise](#you-will-have-an-argument-for-a-rise) benefits of getting certified. If this is the case, try to show the [knowledge maintenance](#you-will-validate-your-knowledge) and [upskilling](#you-will-be-motivated-to-expand-your-knowledge) benefits and tie them to your KPIs. Another option to get a voucher might be to propose it as a fallback benefit if a rise is unavailable in a given evaluation period. If this also doesn't work, it's time to look for other potential sources (or a new employer).
+
+### Vouchers for Partner Community
+
+Another great source of vouchers is limited to employees of Salesforce Partners. Apart from getting those vouchers from their company, there are recurring opportunities given directly from Salesforce for certifications that are currently in their focus. The best place to look for them is to join Partner Community channels for specific products and check the description and recent posts for goodies.
+
+<Button
+    link='https://partners.salesforce.com/_ui/core/chatter/ui/ChatterPage'
+    text="Partner Community"
+    newTab='true'
+/>
+
+### Vouchers from Salesforce
+
+In the past, Salesforce frequently publicly shared vouchers that at least cut down the price and sometimes even allowed for free exam attempts. For example, in the first half of 2023, a $100 off voucher made Salesforce Associate certification completely free. However, since then, those vouchers have become extremely scarce, and the few still appearing are much less beneficial. My favourite place to check which (if any) public vouchers are currently available is to visit the always-updated page by Dinesh Yadav:
+
+<Button
+    link='https://dineshyadav.com/how-to-get-free-or-discounted-salesforce-certification-voucher/'
+    text="Dinesh's Voucher Tracker"
+    newTab='true'
+/>
+
+### Vouchers from Trailhead Quest
+
+Outside of publicly shared vouchers, Salesforce also offers [Trailhead Quests](https://trailhead.salesforce.com/quests) that, for doing some task, give you a chance to get a goodie. There are multiple options, with the prizes varying from the time-limited badge through a mystery box up to the topic of this article - a certification voucher. Keep checking this page occasionally, as the list changes regularly.
+
+<Button
+    link='https://trailhead.salesforce.com/quests#thquests-dreamquest'
+    text="Trailhead Quests"
+    newTab='true'
+/>
+
+### Vouchers from Meetups
+
+Trailblazer Community Group Leaders and offline meetup organisers can sometimes get vouchers from Salesforce for quiz/raffle purposes. Check events happening close to you, broaden your knowledge and get a chance to win a voucher for a free exam.
+
+<Button
+    link='https://trailblazercommunitygroups.com/events/'
+    text="Trailblazer Community Groups events"
+    newTab='true'
+/>
+
+### Vouchers from Salesforce special programs
+
+There are also various opportunities to get free exams by supporting Salesforce with your work.
+
+One example of such a program (rare but relatively accessible) is helping Salesforce create or test new certifications. With this option, you will need to provide feedback on the exam questions, certification scope and prep materials. It will let you attempt the certification for free long before it is publicly available. The best way to look for such opportunities is to follow the Salesforce Credentials Development team on LinkedIn or Trailblazer Community and patiently wait for a [post inviting to a new certification project](https://www.linkedin.com/posts/melaniewachs76_salesforce-entry-level-ai-data-crm-certification-activity-7069787255019614208-yNkI).
+
+### Asking people for vouchers
+
+Please don't.
+
+Think about why that random person should give you a voucher:
+
+- If they get them from their company - the company will check whether they used them for certification.
+- If they get them from Partner Community - those are limited to Partners employees. If you are one, you can get it yourself. If you are not - you won't be eligible to receive it.
+- If they get them from publicly available vouchers - you can also get them from the same source.
+- If they get them from Trailhead Quest or a meetup raffle - they participated because they wanted it for themselves so they won't be giving it away.
+- If they get them from Salesforce programs - they are named vouchers that no one else can use.
+- If they bought them from their pocket - why would they want to give those hundred dollars away?
+
+Instead of asking others about their vouchers, try the methods above to get your own.
+
+## Sum Up
+
+1. Salesforce Certifications are not needed but worthwhile.
+2. There are multiple ways to try getting certified for free, but if you want to go on an exam-passing spree, your best bet is to work for Salesforce Partner (or Salesforce themselves).
