Addition of og image to newsletter page

--- a/sites/newsletter.mdx
+++ b/sites/newsletter.mdx
@@ -2,6 +2,8 @@
 id: newsletter
 title: Newsletter
 description: Get yet another email in your inbox. This time, about SFMC.
+image: img/og/og-image-newsletter.png
+tags: [Marketing Cloud, Personalization, Best Practice]
 ---
 
 import { LeadText } from '../src/components/LeadText.js';
