Added new _Bounce field with a link to KA thanks to Charlie Fay

--- a/docs/config/sfmc-system-data-views.mdx
+++ b/docs/config/sfmc-system-data-views.mdx
@@ -75,6 +75,7 @@ SubscriberType | The subscriber type for the affected subscriber | Text |
 Status | The status of the subscriber | Text | X
 Locale | The locale code for the subscriber | Locale | X
 
+
 </TabItem>
 <TabItem value='values'>
 
@@ -563,6 +564,7 @@ SMTPMessage | The message regarding the bounce from the mail system | Text | X
 SMTPCode | The error code for the bounce from the mail system | Number | X
 TriggererSendDefinitionObjectID | The object ID for the triggered send definition | Text | X
 TriggeredSendCustomerKey | The customer key for the triggered send | Text | X
+IsFalseBounce | Indicates a false bounce if [SFMC received delivery receipt after receiving bounce](https://help.salesforce.com/s/articleView?id=000390396&type=1). | Boolean | X
 
 </TabItem>
 <TabItem value='values'>
