Updated link after SF removed evergage-global-templates repo

--- a/docs/interaction-studio/mcp-serverside-code-basics.mdx
+++ b/docs/interaction-studio/mcp-serverside-code-basics.mdx
@@ -160,7 +160,7 @@ With the basics of Serverside Code processing, you are ready to start coding. Ne
 Here, I want to share a few of my favourite sources focusing on MCP Serverside Code and its use in Campaign Templates:
 
 1. My [MCP Campaign Templates and code snippets](../../category/mc-personalization-snippets/)
-2. Official [GitHub repository](https://github.com/evergage/evergage-global-templates/) with Global Templates
+2. My [GitHub repository](https://github.com/MateuszDabrowski/mcp-campaign-templates) with Global and Custom Templates
 3. Christoper's Long [GitHub repository](https://github.com/christopher-longSFDC/mcp/) with Complex Templates
 4. Salesforce Japan [Template Catalog](https://is-template-guide.herokuapp.com/en/) with Web Campaigns
 
