Linking of new MCP Serverside Context article

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -143,6 +143,7 @@ Salesforce Marketing Cloud Personalization (Interaction Studio) is a cross-chann
 - [Open Time Email Template](./interaction-studio/mcp-open-time-email.mdx)
 - [Serverside Code Basics](./interaction-studio/mcp-serverside-code-basics.mdx)
 - [Serverside Code Properties](./interaction-studio/mcp-serverside-code-properties.mdx)
+- [Serverside Code Context](./interaction-studio/mcp-serverside-code-context.mdx)
 
 ### MC Personalization Snippets
 
